--- a/mois-react-ui/src/App.css
+++ b/mois-react-ui/src/App.css
@@ -10,17 +10,26 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+  min-height: 50vh;
+  display: flow;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  text-align: center;
 }
 
 .App-link {
   color: #61dafb;
+  text-align: center;
+}
+
+.App-intro {
+  background-color: #282c34;
+  color: white;
+  font-size: calc(10px + 2vmin);
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
