--- a/mois-react-ui/src/App.css
+++ b/mois-react-ui/src/App.css
@@ -32,6 +32,12 @@
   text-align: center;
 }
 
+#chartdiv {
+  width: 100%;
+  height: 400px;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
