--- a/mois-react-ui/src/App.css
+++ b/mois-react-ui/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+
 }
 
 .App-logo {
@@ -10,7 +12,18 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 50vh;
+  min-height: 25vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  text-align: center;
+}
+
+.App-body {
+  background-color: #282c34;
   display: flow;
   flex-direction: column;
   align-items: center;
@@ -18,6 +31,13 @@
   font-size: calc(10px + 2vmin);
   color: white;
   text-align: center;
+
+  /*margin: 0;*/
+  height: 100%;
+  /*overflow: inherit;*/
+  /*display: revert;*/
+  /*justify-content: center;*/
+  /*align-items: center;*/
 }
 
 .App-link {
@@ -30,6 +50,27 @@
   color: white;
   font-size: calc(10px + 2vmin);
   text-align: center;
+}
+
+.myH1{
+  color: #61dafb;
+  font-size: calc(30px + 2vmin);
+  /*margin-bottom: 3%;*/
+  font-weight: bold;
+}
+
+.flowStyle{
+  height: 20%;
+  z-index: 0;
+  margin-bottom: 7%;
+  margin-top: 2%;
+
+}
+
+.Chart-styles{
+  /*padding-bottom: 500px;*/
+  padding-top: 4%;
+  background-color: #282c34;
 }
 
 @keyframes App-logo-spin {
