--- a/mois-react-ui/src/App.css
+++ b/mois-react-ui/src/App.css
@@ -58,6 +58,28 @@
   font-weight: bold;
 }
 
+.totalCount{
+  margin-top: 1.5rem;
+  padding-top: .75rem;
+  padding-left: 1.75rem;
+  padding-bottom: .5rem;
+  border-style: inset;
+  border-width: .15rem;
+  border-color: white;
+}
+
+.totalCountText{
+  font-size: 1.5rem;
+  padding-top: .75rem;
+}
+
+.totalCountValue{
+
+  color: #61dafb;
+  font-weight: bold;
+  font-size: 2.5rem;
+}
+
 .flowStyle{
   height: 20%;
   z-index: 0;
